@@ -15,17 +15,35 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.linkedpipes'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
+group = 'com.linkedpipes.lpa'
+version = '0.0.1'
+sourceCompatibility = 10
+targetCompatibility = 10
 
 repositories {
 	mavenCentral()
 }
 
+compileJava {
+	options.compilerArgs += ["--add-modules", "jdk.incubator.httpclient"]
+}
+
+compileTestJava {
+	options.compilerArgs += ["--add-modules", "jdk.incubator.httpclient"]
+}
+
+test {
+	jvmArgs += ["--add-modules", "jdk.incubator.httpclient"]
+}
+
+bootRun {
+	args = ["--add-modules jdk.incubator.httpclient"]
+}
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
-	runtime('org.springframework.boot:spring-boot-devtools')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    runtime('org.springframework.boot:spring-boot-devtools')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile 'com.google.code.gson:gson:2.8.5'
+	compile 'org.apache.jena:apache-jena-libs:3.8.0'
 }
